<resources>
    <string name="app_name">Estadilandia App</string>
    <string name="tab_calculate">Cálculos</string>
    <string name="tab_graphics">Gráficos</string>
    <string name="tab_theory">Teoría</string>
    <string name="menu_load">Cargar datos muestra</string>
    <string name="menu_random_sample">Generar muestra aleatoria</string>
    <string name="load_csv">Cargar CSV</string>
    <string name="cancel">Cancelar</string>
    <string name="generate">Generar</string>
    <string name="histogram">Histograma</string>
    <string name="stem_and_leaf">Diagrama de Tallo y Hoja</string>
    <string name="dialog_message">Datos requeridos para distribución Gausseana o Normal</string>
    <string name="dialog_title">Generar muestra aleatoria</string>
    <string name="mean">Media</string>
    <string name="mean_semicolons">Media:</string>
    <string name="std_deviation">Desviación Estándar</string>
    <string name="std_deviation_semicolons">Desviación Estándar:</string>
    <string name="value">Valor (x):</string>
    <string name="sample_size">Tamaño de la muestra</string>
    <string name="value_x">Valor (x):</string>
    <string name="value_z">Valor (z):</string>
    <string name="probability">Probabilidad (entre 0 y 1):</string>
    <string name="calculate">Calcular</string>
    <string name="accumulate">¿Acumula?</string>
    <string name="select_distribution">Selecciona una distribución</string>
    <string name="result">Resultado:</string>
    <string name="x_value_error">Debe ingresar un valor de x</string>
    <string name="beta_empty_error">Debe ingresar un valor para Beta.</string>
    <string name="beta_invalid">Beta debe ser positivo.</string>
    <string name="event_probability">Probabilidad del evento:</string>
    <string name="success_probability">Probabilidad de éxito:</string>
    <string name="expected_number_ocurrences">Nro. Esperado de Ocurrencias:</string>
    <string name="population_size">Tamaño de la población:</string>
    <string name="number_of_successes">Nro. de Positivos en Población:</string>
    <string name="sample_size_error">Debe ingresar un valor de muestra</string>
    <string name="shape">Forma:</string>
    <string name="scale">Escala:</string>
    <string name="mu">Ubicación (mu):</string>
    <string name="beta">Escala (beta):</string>
    <string name="alpha">Forma (alpha):</string>
    <string name="binomial">Binomial</string>
    <string name="geometric">Geométrica</string>
    <string name="poisson">Poisson</string>
    <string name="hypergeometric">Hypergeométrica</string>
    <string name="exponential">Exponencial</string>
    <string name="gamma">Gamma</string>
    <string name="normal">Normal</string>
    <string name="gumbel">Gumbel</string>
    <string name="weibull">Weibull</string>
    <string name="standard_normal">Normal Estándar</string>
    <string name="inverse_standard_normal">Normal Inversa</string>
    <string name="discrete">Discretos</string>
    <string name="continuous">Continuos</string>
    <string name="inverse_exponential">Exponencial Inversa</string>
    <string name="inverse_gamma">Gamma Inversa</string>
    <string name="inverse_gumbel">Gumbel Inversa</string>
    <string name="inverse_weibull">Weibull Inversa</string>
    <string name="probability_error">El valor de probabilidad debe estar entre 0 y 1.</string>
    <string name="tests_count">Cantidad de pruebas:</string>
</resources>
